# levenshtein-benchmarks

./: Makefile  README.md  generate_random_text.py  index.txt  search.txt
R/: main.R
duckdb/: main.sql
julia/: Manifest.toml  main.jl
py/: main.py  pyproject.toml
rust/: Cargo.toml
rust/src/: main.rs
